--- a/lhc1.html
+++ b/lhc1.html
@@ -1,15 +1,8 @@
 <!DOCTYPE html>
-
 <html>
-
 <script>
-
-window.location.href="http://www.bing.com";
-
+window.location.href="http://kj5588.com/chajian/D2.html";
 </script>
-
 <body>
-
 </body>
-
 </html>
