--- a/lhc2.html
+++ b/lhc2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <script>
-window.location.href="http://www.kj079.com/chajian/H.html";
+window.location.href="http://www.kj901.com/chajian/D2.html";
 </script>
 <body>
 </body>
