--- a/lhc3.html
+++ b/lhc3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <script>
-window.location.href="http://www.kj079.com/chajian/H.html";
+window.location.href="http://www.kj1415.com/kj.htm";
 </script>
 <body>
 </body>
