--- a/lhc3.html
+++ b/lhc3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <script>
-window.location.href="http://www.kj1415.com/kj.htm";
+window.location.href="http://kj5588.com/chajian/D2.html";
 </script>
 <body>
 </body>
